# openapi-generator

./: pom.xml
.github/workflows/: gradle-test.yaml  maven-plugin-tests.yaml  samples-java-server-jdk8.yaml  samples-jaxrs.yaml  samples-scala.yaml
CI/: circle_parallel.sh
docs/generators/: jaxrs-jersey.md
modules/openapi-generator-maven-plugin/: pom.xml
modules/openapi-generator-maven-plugin/examples/: java-client.xml
samples/asciiDoc/: index.adoc
samples/client/petstore/rust/reqwest/petstore-awsv4signature/: Cargo.toml  README.md
samples/client/petstore/rust/reqwest/petstore-awsv4signature/.openapi-generator/: FILES
samples/client/petstore/rust/reqwest/petstore-awsv4signature/docs/: DefaultApi.md  ExampleResponse.md  OtherObject.md
samples/client/petstore/rust/reqwest/petstore-awsv4signature/src/apis/: configuration.rs  default_api.rs  mod.rs
samples/client/petstore/rust/reqwest/petstore-awsv4signature/src/models/: example_response.rs  mod.rs  other_object.rs
samples/schema/postman-collection/: postman.json
samples/server/petstore/python-fastapi/: README.md  openapi.yaml  setup.cfg
samples/server/petstore/python-fastapi/.openapi-generator/: FILES
samples/server/petstore/python-fastapi/src/openapi_server/: main.py
samples/server/petstore/python-fastapi/src/openapi_server/apis/: default_api.py  default_api_base.py
samples/server/petstore/python-fastapi/src/openapi_server/models/: dummy200_response.py  dummy200_response_outer_prop.py  dummy200_response_outer_prop_inner_prop.py  example_response.py  node.py  other_object.py
samples/server/petstore/python-fastapi/tests/: test_default_api.py
(+6370 files in other folders)
