[package]
name = "petstore-reqwest-awsv4signature"
version = "dummy"
authors = ["OpenAPI Generator team and contributors"]
description = "dummy"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
aws-sigv4 = "0.3.0"
http = "0.2.5"
secrecy = "0.8.0"
reqwest = "~0.9"
